--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "design-week-2019",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "AIGA Louisville's Design Week 2019 site",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "David Y. Soards davidysoards@gmail.com",
   "dependencies": {
     "@emotion/core": "^10.0.14",
     "@emotion/styled": "^10.0.14",
-    "emotion-theming": "^10.0.14",
+    "axios": "^0.19.0",
+    "date-fns": "^1.30.1",
     "gatsby": "^2.13.21",
     "gatsby-image": "^2.2.6",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-manifest": "^2.2.3",
     "gatsby-plugin-offline": "^2.2.4",
     "gatsby-plugin-react-helmet": "^3.1.2",
+    "gatsby-plugin-sass": "^2.1.3",
     "gatsby-plugin-sharp": "^2.2.7",
+    "gatsby-plugin-typography": "^2.3.2",
     "gatsby-source-filesystem": "^2.1.5",
     "gatsby-transformer-sharp": "^2.2.3",
-    "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
@@ -44,5 +49,11 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+  },
+  "browserslist": [
+    ">1%",
+    "last 4 versions",
+    "not dead",
+    "ie 11"
+  ]
 }
