--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-manifest": "^2.2.5",
     "gatsby-plugin-offline": "^2.2.6",
-    "gatsby-plugin-postcss": "^2.1.3",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sharp": "^2.2.11",
     "gatsby-plugin-typography": "^2.3.2",
@@ -53,6 +52,6 @@
   "browserslist": [
     ">0.5%",
     "last 4 versions",
-    "not ie < 11"
+    "not dead"
   ]
 }
