--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
+    "react-modal": "^3.10.1",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19"
   },
